--- a/task2/style.css
+++ b/task2/style.css
@@ -16,7 +16,8 @@ body {
   color: white;
   font-weight: 700;
   text-transform: uppercase;
-  animation: jump 0.5s 0.4s ease-in-out, spin 0.5s ease-in-out, hide 1s 2s ease;
+  animation: jump 0.5s 0.4s ease-in-out, spin 0.5s ease-in-out,
+    hide 1s 2s ease forwards;
   margin: auto;
 }
 @keyframes jump {
