--- a/task3/style.css
+++ b/task3/style.css
@@ -30,9 +30,8 @@
   height: 50px;
   border: 4px solid lightgray;
   border-top: 4px solid;
-  margin-bottom: 8px;
   border-radius: 50%;
-  margin: auto;
+  margin: 8px auto;
   animation: circle 2s linear;
 }
 @keyframes circle {
