--- a/task3/style.css
+++ b/task3/style.css
@@ -31,7 +31,7 @@
   border: 4px solid lightgray;
   border-top: 4px solid;
   border-radius: 50%;
-  margin: 8px auto;
+  margin: 0 auto 8px;
   animation: circle 2s linear;
 }
 @keyframes circle {
