--- a/task3/style.css
+++ b/task3/style.css
@@ -29,10 +29,10 @@
   width: 50px;
   height: 50px;
   border: 4px solid lightgray;
-  border-top: 4px solid;
+  border-top: 4px solid black;
   border-radius: 50%;
   margin: 0 auto 8px;
-  animation: circle 2s linear;
+  animation: circle 2s infinite linear;
 }
 @keyframes circle {
   from {
