--- a/task3/style.css
+++ b/task3/style.css
@@ -32,7 +32,8 @@
   border: 4px solid lightgray;
   border-top: 4px solid black;
   border-radius: 50%;
-  margin: 0 auto 8px;
+  margin: auto;
+  margin-bottom: 8px;
   animation: circle 2s infinite linear;
 }
 @keyframes circle {
