--- a/task3/style.css
+++ b/task3/style.css
@@ -15,6 +15,7 @@
   font-size: 16px;
   text-transform: uppercase;
   animation: blinking 2s infinite linear;
+  margin: auto;
 }
 
 .circle {
@@ -24,7 +25,7 @@
   border-top: 4px solid black;
   border-radius: 50%;
   margin: auto;
-  margin-bottom: 8px;
+  padding-bottom: 8px;
   animation: circle 2s infinite linear;
 }
 @keyframes blinking {
