--- a/task3/style.css
+++ b/task3/style.css
@@ -15,17 +15,18 @@
   font-size: 16px;
   text-transform: uppercase;
   animation: blinking 2s infinite linear;
-  margin: auto;
+  margin: 0 auto auto auto;
 }
 
 .circle {
+  box-sizing: border-box;
   width: 50px;
   height: 50px;
   border: 4px solid lightgray;
   border-top: 4px solid black;
   border-radius: 50%;
-  margin: auto;
-  padding-bottom: 8px;
+  margin: 0 auto 8px;
+
   animation: circle 2s infinite linear;
 }
 @keyframes blinking {
