--- a/task3/style.css
+++ b/task3/style.css
@@ -6,7 +6,6 @@
   display: flex;
 
   height: 100vh;
-  width: 100vw;
 }
 .spinner {
   margin: auto;
@@ -19,13 +18,12 @@
 }
 
 .circle {
-  box-sizing: border-box;
   width: 50px;
   height: 50px;
   border: 4px solid lightgray;
   border-top: 4px solid black;
   border-radius: 50%;
-  margin: 0 auto 8px;
+  margin: 1px auto 8px;
 
   animation: circle 2s infinite linear;
 }
